--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import "~bootstrap/scss/bootstrap";
+@import '~bootstrap/scss/bootstrap';
 
 body {
     font-family: 'Courier New';
@@ -43,17 +43,42 @@ body {
 
 
 // Progress Bar 
-#eatProgress {
-    width: 75%;
+// #eatProgress {
+    // height: 30px;
+    // text-align: center; /* To center it horizontally (if you want) */
+    // line-height: 40px; /* To center it vertically */
+    // color: white;
+    //   }
+
+  .button {
+    width: 20%;
+    height: 20px;
+    border-radius: 6px;
+    margin: 1em;
     background-color: grey;
-  }
-  
-  #eatBar {
-    width: 10%;
-    height: 30px;
-    background-color: #4CAF50;
-    text-align: center; /* To center it horizontally (if you want) */
-    line-height: 40px; /* To center it vertically */
     color: white;
-      }
-  
+    border: none;
+   
+    }
+
+// .eatContainer {
+//     display: flex;
+//     flex-flow: row wrap;
+//     justify-content: space-around;
+//     }
+
+// styling on my pet
+#pet {
+    position: absolute;
+    margin: 0 auto;
+    height: 300px;
+    width: 300px;
+    top: 25vh;
+    right: 0;
+    left: 0;
+
+    img {
+        width: 100%;
+        height: 100%;
+    }
+}
